--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/sass": "^1.43.1",
     "axios": "^0.26.1",
-    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-use-window-width": "^2.0.1",
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "sass": "^1.50.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
